tests/pass/run/string_count_parity/main.kira
@Main
function main() {
    let title = "KIRA"
    let subtitle = "UI FOUNDATION"
    print(title.count)
    print(subtitle.count)
    return
}
